--- a/abschlussquiz/src/styles/index.scss
+++ b/abschlussquiz/src/styles/index.scss
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: 'PixelFont';
-    src: url('./src/assets/Pokemon_X_and_Y.ttf') format('truetype'); 
+    src: url('../assets/Pokemon_X_and_Y.ttf') format('truetype'); 
 }
 
 body{
