--- a/abschlussquiz/src/components/IntroPage/IntroPage.scss
+++ b/abschlussquiz/src/components/IntroPage/IntroPage.scss
@@ -3,7 +3,10 @@
 .quiz-wrapper {
     display: flex;
     align-items: center;
-    justify-content:center
+    justify-content:center;
+    height: 70vh; /* Set the height to fill the viewport */
+    overflow: hidden; /* Prevent content from pushing it down */
+    position: relative;
 }
 
 .mayor-container {
@@ -12,6 +15,8 @@
     object-fit: contain;
 
     margin-top: 100px;
+    margin-right: 45%;
+    position: fixed;
 }
 
 .damsoff-container{
@@ -20,6 +25,9 @@
     object-fit: contain;
 
     margin-top: 130px;
+    margin-left: 80%;
+    position: fixed;
+
 }
 
 .quiz-container {
