--- a/abschlussquiz/src/components/Quiz/Quiz.scss
+++ b/abschlussquiz/src/components/Quiz/Quiz.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content:center;
-    overflow: hidden; /* Prevent content from pushing it down */
+    height: 70vh; 
     position: relative;
 }
 
