--- a/abschlussquiz/src/components/Quiz/Quiz.scss
+++ b/abschlussquiz/src/components/Quiz/Quiz.scss
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content:center;
-    height: 70vh; 
+    height: 60%; 
     position: relative;
 }
 
